[package]
name = "lavandual"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fsnkty/lavandula"
description = "small bevy gamedev playground, only targetting windows msvc"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    # default features:
    #"android_shared_stdcxx", # Android: use shared C++ library
    "animation",            # Animation support
    "bevy_animation",       # Provides animation functionality
    "bevy_asset",           # Assets management
    "bevy_audio",           # Builtin audio
    "bevy_color",           # Provides shared color types and operations
    "bevy_core_pipeline",   # Common rendering abstractions
    #"bevy_gilrs",          # Gamepad input support
    #"bevy_gizmos",         # Support drawing debug lines and shapes
    #"bevy_gltf",           # GLTF 3D assets format support
    #"bevy_pbr",            # 3D (physically-based) rendering
    "bevy_render",          # Rendering framework core
    "bevy_scene",           # Scenes management
    "bevy_sprite",          # 2D (sprites) rendering
    "bevy_state",           # Enable built in global state machines
    "bevy_text",            # Text/font rendering
    "bevy_ui",              # UI toolkit
    "bevy_winit",           # Window management (cross-platform Winit backend)
    "default_font",         # Embed a minimal default font for text/UI
    "hdr",                  # HDR images
    "ktx2",                 # Preferred format for GPU textures
    "multi_threaded",       # Run with multithreading
    "png",                  # PNG image format for simple 2D images
    "smaa_luts",            # Include SMAA Look Up Tables KTX2 Files
    "sysinfo_plugin",       # Enables system information diagnostic plugin
    "tonemapping_luts",     # Support different camera Tonemapping modes (enables KTX2+zstd)
    "vorbis",               # Audio: OGG Vorbis
    #"webgl2",              # Web: use WebGL2 instead of WebGPU
    #"x11",                 # Linux: Support X11 windowing system
    "zstd",                 # ZSTD compression support in KTX2 files
]}
avian2d = "0.1.2" # physics engine plugin
leafwing-input-manager = "0.15.1"
bevy-inspector-egui = "0.27"

## can increase performance particularly with wgpu, should be disabled if errors are poor
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
## set explicitly to access outside of bevy ( atm just to set winit window decoration icon )
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
image = { version = "0.25.2", default-features = false }

[features]
dev = [
    "bevy/dynamic_linking",
]

## with bevy dynamic linking this compile time hit is worth it
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

## used to embed icon in windows executable
[build-dependencies]
embed-resource = "3.0.1"
